--- a/project.properties
+++ b/project.properties
@@ -6,8 +6,8 @@ playbook.bbwp.dir=C:\\Program\ Files\\Research\ In\ Motion\\BlackBerry\ WebWorks
 
 #blackberry.sigtool.password=
 
-playbook.sigtool.csk.password=vector
-playbook.sigtool.p12.password=vector
+playbook.sigtool.csk.password=
+playbook.sigtool.p12.password=
 
 blackberry.sim.password=
 
@@ -17,4 +17,4 @@ playbook.sim.password=
 
 playbook.device.ip=192.168.1.2
 
-playbook.device.password=vector
+playbook.device.password=
